PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/ProjectHistoryCheck__c.object-meta.xml
<CustomObject>
    <label>프로젝트 실행계획서</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>프로젝트 실행계획서 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>