PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/ApprovalforPlan__c.field-meta.xml
<CustomField>
    <fullName>ApprovalforPlan__c</fullName>
    <label>승인단계</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>승인제출</fullName>
            </value>
            <value>
                <fullName>승인대기</fullName>
            </value>
            <value>
                <fullName>승인완료</fullName>
            </value>
            <value>
                <fullName>승인거부</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>