PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/contractFees__c.field-meta.xml
<CustomField>
    <fullName>contractFees__c</fullName>
    <formula>project__r.ru_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계약금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>