PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/fm_expenses__c.field-meta.xml
<CustomField>
    <fullName>fm_expenses__c</fullName>
    <formula>project__r.ExpectedExpenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>가용 경비예산</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>