PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/project__c.field-meta.xml
<CustomField>
    <fullName>project__c</fullName>
    <label>프로젝트</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>프로젝트 실행계획서</relationshipLabel>
    <relationshipName>projectstatus</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>