PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectcommonexpense__c.field-meta.xml
<CustomField>
    <fullName>projectcommonexpense__c</fullName>
    <formula>contractFees__c * ( 20 / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>본사 공통비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>