PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectcontract__c.field-meta.xml
<CustomField>
    <fullName>projectcontract__c</fullName>
    <formula>( projecttotalexpense__c  /  contractFees__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계약금액 대비 경비 비율</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>