PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectdinner_fee__c.field-meta.xml
<CustomField>
    <fullName>projectdinner_fee__c</fullName>
    <label>회식비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>