PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectenddate__c.field-meta.xml
<CustomField>
    <fullName>projectenddate__c</fullName>
    <label>예상 종료일자</label>
    <type>Date</type>
</CustomField>