PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectentertainmentfee__c.field-meta.xml
<CustomField>
    <fullName>projectentertainmentfee__c</fullName>
    <label>접대비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>