PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectexternalempfees__c.field-meta.xml
<CustomField>
    <fullName>projectexternalempfees__c</fullName>
    <label>외주 투입 인력 예상비용</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>