PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectfeeetc__c.field-meta.xml
<CustomField>
    <fullName>projectfeeetc__c</fullName>
    <label>기타</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>