PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectincome__c.field-meta.xml
<CustomField>
    <fullName>projectincome__c</fullName>
    <formula>contractFees__c -  projecttotalexpense__c -  projectinernalfees__c -  projectexternalempfees__c -  projectcommonexpense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>실제 프로젝트 예상 매출</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>