PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectinernalfees__c.field-meta.xml
<CustomField>
    <fullName>projectinernalfees__c</fullName>
    <label>당사 투입 인력 예상비용</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>