PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectinternaluser__c.field-meta.xml
<CustomField>
    <fullName>projectinternaluser__c</fullName>
    <label>당사 예상 투입인력</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>