PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectmealplan__c.field-meta.xml
<CustomField>
    <fullName>projectmealplan__c</fullName>
    <label>식대/야근식대</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>