PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projectstartdate__c.field-meta.xml
<CustomField>
    <fullName>projectstartdate__c</fullName>
    <label>예상 착수일자</label>
    <type>Date</type>
</CustomField>