PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projecttotalexpense__c.field-meta.xml
<CustomField>
    <fullName>projecttotalexpense__c</fullName>
    <formula>projecttransportation__c + projectfeeetc__c + projectmealplan__c + projectentertainmentfee__c + projectdinner_fee__c + projecttravel_expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>계획 경비예산</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>