PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projecttransportation__c.field-meta.xml
<CustomField>
    <fullName>projecttransportation__c</fullName>
    <label>교통비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>