PA_Education/TestMenifest/force-app/main/default/objects/ProjectHistoryCheck__c/fields/projecttravel_expenses__c.field-meta.xml
<CustomField>
    <fullName>projecttravel_expenses__c</fullName>
    <label>프로젝트 출장비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>